--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "grunt-contrib-copy": "~0.4.1"
   },
   "dependencies": {
-    "pegjs": "~0.7.0"
+    "pegjs": "~0.7.0",
+    "esprima": "~1.0.4",
+    "handlebars": "~1.0.12"
   }
 }
